[tool.poetry]
name = "github-profile-bot"
version = "0.1.0"
description = "bot to fetch profile pics from git hub"
authors = ["glitchdawg <shivavayuputra8512@GMail.com>"]
readme = "README.md"
packages = [{include = "github_profile_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
